kubernetes/09-cloudkart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudkart-service
  namespace: cloudkart
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30000
  selector:
    app: cloudkart
