kubernetes/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudkart-ingress
  namespace: cloudkart
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - cloudkart.buildwithkanha.shop
    secretName: cloudkart-tls-secret  # Cert-Manager will manage this
  rules:
  - host: cloudkart.buildwithkanha.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloudkart-service
            port:
              number: 80
